[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "simple-knn"
version = "0.1.0"
description = "Simple KNN implementation with CUDA support"
readme = "LICENSE.md"
requires-python = ">=3.08"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools]
packages = ["simple_knn"]